Edit the scroll site animation to be Fati's donuts scroll animation

--- a/06_Scroll_Animation/index.html
+++ b/06_Scroll_Animation/index.html
@@ -7,21 +7,30 @@
     <title>Scroll Animation</title>
 </head>
 <body>
-    <h1>Scroll to see the animation</h1>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
+    <h1>Scroll Fati's Donuts</h1>
+    <div class="box"><img src="https://static.zyda.com/photos/restaurants/logo_urls/4771/original/Fati's_Logo_%281%29.png?1703287961" alt="" srcset=""></div>
+    <div class="box"><img src="./Images/IMG_2254_384x_auto_none-removebg-preview.png" alt="" srcset=""></div>
+
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_sections/photo_urls/3ffbae3c-04b3-4c23-bfbe-b24cd66065ed/original/IMG_2254.JPG?1703265552" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_sections/photo_urls/e08cedd9-e116-4a6e-b139-96a8c3c0ccf0/original/WhatsApp_Image_2023-06-13_at_7.12.09_PM_%281%29.jpeg?1686685858" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_sections/photo_urls/b67a203b-5b3b-45e9-8606-5c3e39e60b48/original/Screen_Shot_2023-06-13_at_11.08.05_PM.png?1686687204" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_sections/photo_urls/ed088aa2-f3c6-4722-9cc4-19034433f89f/original/HBD.png?1686686869" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_items/photo_urls/462f0456-471f-4769-97d2-6c358701aeab/original/WhatsApp_Image_2023-09-24_at_5.20.11_PM.jpeg?1695570440" alt="" srcset=""></div>
+    
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_items/photo_urls/09ce4411-ae1c-45cc-9213-28a712cfd0b9/original/WhatsApp_Image_2023-06-13_at_4.40.12_PM_%281%29.jpeg?1686669157" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_items/photo_urls/45d5d2b3-dceb-466c-b7fa-65f36fe817a6/original/WhatsApp_Image_2023-06-13_at_4.41.37_PM.jpeg?1686668995" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_items/photo_urls/6dfbb577-1910-4548-9bcd-a07a62523ca7/original/IMG_2240.jpg?1703266097" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_items/photo_urls/3eb9b519-7a5d-4ef1-ac6c-3710f6d483d6/original/IMG_2238.JPG?1703265833" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_items/photo_urls/a0a6fe10-1162-4403-b3b3-9ee4fd554fed/original/WhatsApp_Image_2023-09-14_at_4.59.23_PM.jpeg?1694704672" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_items/photo_urls/d108ee69-f04a-48ef-b659-8fe6ed92bd1d/original/donut.jpg?1692612165" alt="" srcset=""></div>
+
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/images/557611/image_urls/default/1a4aa49bd92ec9eeebd5dea126689c02e23b70be.jpg?1683456377" alt="" srcset=""></div>
+
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/photos/menu_items/photo_urls/a057abf7-a2f1-44fc-959c-a64877493d81/original/IMG_5553.JPG?1686704488" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/images/557607/image_urls/default/ebb63ec86c86171165063591532ccfa9b98f6e0d.jpg?1683456290" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/images/557606/image_urls/default/e1f20b70faa79ad022a5be757caf651efd81401d.JPG?1683456274" alt="" srcset=""></div>
+    <div class="box"><img src="https://images.zyda.co/cdn-cgi/image/width=384,f=auto,metadata=none/images/557598/image_urls/default/1003d6c87b26137b6533e6e2e75a1332fb114737.jpg?1683456115" alt="" srcset=""></div>
+
     <script src="./script.js"></script>
 </body>
 </html>
